5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1613_1446.log
== SUBMITION (2019-03-29 12:09:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= input("escolha um numero:")
quantidade_de_michael= litros/3
print(round(quantidade_de_michael, 3))
-- EXECUTION TIME:
0.120918
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1446/main.py", line 5, in <module>
    quantidade_de_michael= litros/3
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:09:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= input("escolha um numero:")
quantidade_de_michael= litros/3
print(round(quantidade_de_michael, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    quantidade_de_michael= litros/3
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:10:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= input("escolha um numero:")
quantidade_de_michael= float(litros/3)
print(round(quantidade_de_michael, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    quantidade_de_michael= float(litros/3)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:11:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= input("escolha um numero:")
quantidade_de_michael= star(litros/3)
print(round(quantidade_de_michael, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    quantidade_de_michael= star(litros/3)
NameError: name 'star' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:11:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= input("escolha um numero:")
quantidade_de_michael= litros-2/3
print(round(quantidade_de_michael, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    quantidade_de_michael= litros-2/3
TypeError: unsupported operand type(s) for -: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:12:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= float(input("escolha um numero:"))
quantidade_de_michael= litros/3
print(round(quantidade_de_michael, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:12:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
litros= float(input("escolha um numero:"))
quantidade_de_michael= litros/3
print(round(quantidade_de_michael, 3))
-- EXECUTION TIME:
0.143227
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
